# animeapi-py

./: .gitattributes  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
aniapi/: __init__.py  aniapi.py  converter.py  models.py
animeapi/: __init__.py  animeapi.py  asyncaniapi.py  base.py  converter.py  excepts.py  known_changes.py  models.py
docs/: conf.py  index.rst
